<resources>
    <string name="app_name">토닥토닥</string>
    <string name="time_set">%2$s %2$s:%2$s</string>

    <string name="map_tab_hospital">병원</string>
    <string name="map_tab_pharmacy">약국</string>

    <string name="category_dialog_title">진료 과목</string>
    <string name="category_dialog_reset">초기화</string>
    <string name="category_item_all">""</string>
    <string name="category_item_baby">소아과</string>
    <string name="category_item_internal">내과</string>
    <string name="category_item_ent">이비인후과</string>
    <string name="category_item_skin">피부과</string>
    <string name="category_item_orthopedics">정형외과</string>
    <string name="category_item_eyes">안과</string>
    <string name="category_item_dental">치과</string>
    <string name="category_item_oriental">한의원</string>
    <string name="category_item_maternity">산부인과</string>
    <string name="category_item_urology">비뇨기과</string>
    <string name="category_item_psychiatry">정신의학과</string>
    <string name="category_item_plastic">성형외과</string>
    <string name="category_item_family">가정의학과</string>
    <string name="category_item_surgery">외과</string>
    <string name="category_item_neurosurgery">신경외과</string>
    <string name="category_item_anesthesia">마취통증과</string>
    <string name="category_item_neurology">신경과</string>

    <string name="map_refresh">재탐색</string>
    <string name="map_marker_group_list">병원 리스트</string>
    <string name="map_marker_group_list_item_today">오늘</string>

    <string name="load_map_dialog_title">길찾기 선택</string>
    <string name="load_map_dialog_google">구글맵스</string>
    <string name="load_map_dialog_naver">네이버지도</string>
    <string name="load_map_dialog_kakao">카카오맵</string>

    <string name="medical_call">전화하기</string>
    <string name="medical_call_disable">전화번호 정보가 없습니다.</string>

    <string name="medical_list_title">주변 병원 리스트</string>
    <string name="medical_list_order">거리순</string>
    <string name="medical_list_total">총 %d개</string>
    <string name="medical_list_empty">병원을 찾을 수 없습니다.</string>
    <string name="medical_list_last">더 이상 %s이 없습니다.</string>

    <string name="medical_empty">현재 운영중인 %s이 없습니다.</string>
    <string name="start_time_error_message">시작시간은 종료시간보다 빨라야 합니다.</string>
    <string name="end_time_error_message">종료시간은 시작시간보다 늦어야 합니다.</string>
    <string name="set_time_error_message">종료시간은 시작시간보다 이후로 설정해주세요.</string>

    <string name="medical_empty_mask">현재 운영중인 기관이 없습니다.</string>
    <string name="map_mask_button">마스크</string>
    <string name="map_clinic_button">선별진료소</string>
    <string name="map_secure_button">국민안심병원</string>
    <string name="set_time">진료 시간</string>
    <string name="map_clinic_disable_message">%s 보기 중에는 사용할 수 없습니다.\n%s 태그를 해제 해주세요.</string>

    <string name="network_error_message">서버에서 데이터를 받아오지 못하였습니다.</string>
    <string name="popup">국민안심병원이란?</string>
    <string name="popup_message">코로나19의 병원 내 감염을 막기 위해\n 호흡기 환자와 비호흡기 환자의\n 진료 과정을 분리한 병원입니다</string>

    <string name="mask_banner_title">해당 위치\n마스크 구매 가능 지점</string>
    <string name="mask_stock_on">재고 ON</string>
    <string name="mask_stock_off">재고 OFF</string>
    <string name="mask_load_btn">길찾기</string>
    <string name="mask_arrival_time">입고 시간</string>
    <string name="mask_update_guide">* 공공데이터 정보로 5~10분 단위로 업데이트 됩니다.</string>
    <string name="mask_stock_count">%d 곳</string>
    <string name="mask_popup_title">%s은<![CDATA[<br/>]]><![CDATA[<b>생년 끝자리 %s 구매하는 날!</b>]]></string>
    <string name="mask_popup_contents">※ 신분증을 지참하고 판매처를 방문해주세요.</string>
    <string name="mask_popup_sub_contents">마스크 정보는 심평원에서 제공하며 실제 약국이 보유하고 있는 마스크의 수와 차이가 있을 수 있습니다. 수고해주시는 약사분들께 따듯한 응원 부탁드립니다.</string>
</resources>
