<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="vm"
            type="com.nexters.doctor24.todoc.ui.findload.FindLoadViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_marker_list_dialog"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_list_title"
            style="@style/AndSt1CenterBold14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:text="@string/load_map_dialog_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btn_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:src="@drawable/ic_close"
            android:onClick="@{()->vm.onCloseDialog()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/border"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="16.5dp"
            android:background="@color/grey_4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_list_title" />

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/border"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            >

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/rb_google"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="26dp"
                android:text="@string/load_map_dialog_google"
                android:onClick="@{() -> vm.onCheckedGoogleMap()}"
                style="@style/AndB1LeftRegular16"
                />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/rb_naver"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/load_map_dialog_naver"
                android:onClick="@{() -> vm.onCheckedNaverMap()}"
                style="@style/AndB1LeftRegular16"
                />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/rb_kakao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="24dp"
                android:text="@string/load_map_dialog_kakao"
                android:onClick="@{() -> vm.onCheckedKakaoMap()}"
                style="@style/AndB1LeftRegular16"
                />

        </RadioGroup>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>