<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="vm"
            type="com.nexters.doctor24.todoc.ui.mask.MaskMapViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/background_marker_list_dialog"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingTop="16dp"
            android:paddingBottom="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">


            <ImageView
                android:id="@+id/iv_popup_close_btn"
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:onClick="@{()->vm.onCloseDialog()}"
                android:src="@drawable/ic_close"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/tv_pop_up_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center_horizontal"
                android:lineSpacingExtra="6sp"
                android:text="@string/mask_popup_title"
                android:textSize="22dp"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_popup_close_btn" />

            <TextView
                android:id="@+id/tv_pop_up_contents"
                style="@style/AndSt1LeftRegular14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="22dp"
                android:textSize="14dp"
                android:text="@string/mask_popup_contents"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_pop_up_title" />
            
            <View
                android:id="@+id/border"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@color/grey_4"
                android:layout_marginVertical="22dp"
                app:layout_constraintTop_toBottomOf="@id/tv_pop_up_contents"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/AndSt2LeftRegular12"
                android:text="@string/mask_popup_sub_contents"
                android:textSize="12dp"
                android:layout_marginTop="22dp"
                app:layout_constraintTop_toBottomOf="@id/border"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <ImageView
            android:id="@+id/iv_popup_dialog_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/img_mask_popup"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/container"
            app:layout_constraintBottom_toTopOf="@id/container"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>