<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="vm"
            type="com.nexters.doctor24.todoc.ui.corona.CoronaMapViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.naver.maps.map.MapView
            android:id="@+id/corona_map_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/button_close"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_marginTop="40dp"
            android:layout_marginStart="24dp"
            android:background="@drawable/btn_close"
            android:onClick="@{() -> vm.onClickClose() }"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <TextView
            android:id="@+id/text_btn_mask"
            android:layout_width="79dp"
            android:layout_height="44dp"
            android:text="@string/map_mask_button"
            android:gravity="center"
            android:textSize="14dp"
            android:textColor="@color/selector_text_corona_button"
            android:background="@drawable/selector_mask_button_bg"
            android:onClick="@{()->vm.onClickMaskBtn()}"
            android:layout_marginTop="10dp"
            android:paddingBottom="4dp"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintTop_toBottomOf="@id/button_close"
            app:layout_constraintStart_toStartOf="@id/button_close"
            app:layout_constraintEnd_toStartOf="@id/text_btn_corona"/>

        <TextView
            android:id="@+id/text_btn_corona"
            android:layout_width="122dp"
            android:layout_height="44dp"
            android:text="@string/map_corona_button"
            android:gravity="center"
            android:textSize="14dp"
            android:textColor="@color/selector_text_corona_button"
            android:background="@drawable/selector_corona_button_bg"
            android:onClick="@{()->vm.onClickCoronaBtn()}"
            android:paddingBottom="4dp"
            app:layout_constraintTop_toTopOf="@id/text_btn_mask"
            app:layout_constraintBottom_toBottomOf="@id/text_btn_mask"
            app:layout_constraintStart_toEndOf="@id/text_btn_mask"
            app:layout_constraintEnd_toStartOf="@id/text_btn_secure"
            />

        <TextView
            android:id="@+id/text_btn_secure"
            android:layout_width="118dp"
            android:layout_height="44dp"
            android:text="@string/map_secure_button"
            android:gravity="center"
            android:textSize="14dp"
            android:textColor="@color/selector_text_corona_button"
            android:background="@drawable/selector_secure_button_bg"
            android:onClick="@{()->vm.onClickCoronaSecureBtn()}"
            android:layout_marginEnd="24dp"
            android:paddingBottom="4dp"
            app:layout_constraintTop_toTopOf="@id/text_btn_corona"
            app:layout_constraintBottom_toBottomOf="@id/text_btn_corona"
            app:layout_constraintStart_toEndOf="@id/text_btn_corona"
            app:layout_constraintEnd_toEndOf="parent"/>


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/button_list"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/ic_medical_list"
            app:layout_constraintTop_toBottomOf="@id/text_btn_secure"
            app:layout_constraintEnd_toEndOf="@id/text_btn_secure"
            />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/btn_refresh"
            android:layout_width="124dp"
            android:layout_height="56dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/ic_refresh_layout"
            android:onClick="@{()->vm.onClickRefresh()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_btn_mask"
            >
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_refresh"
                style="@style/AndB1CenterRegular16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_refresh"
                android:drawablePadding="8dp"
                android:gravity="center"
                android:layout_marginBottom="4dp"
                android:text="@string/map_refresh"
                android:textSize="16dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/button_location"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="93dp"
            android:src="@drawable/ic_location_follow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>